<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:background="@color/white"
    tools:context=".ViewEventActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:divider="?android:listDivider"
        android:showDividers="middle">

        <TextView
            android:id="@+id/meeting_name"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:background="@null"
            android:gravity="center_vertical|start"
            android:minHeight="?listPreferredItemHeight"
            android:paddingTop="20dp"
            android:paddingBottom="20dp"
            android:paddingStart="?listPreferredItemPaddingLeft"
            android:paddingEnd="?listPreferredItemPaddingRight"/>

        <TextView
            android:id="@+id/meeting_description"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:background="@null"
            android:gravity="center_vertical|start"
            android:minHeight="?listPreferredItemHeight"
            android:paddingTop="20dp"
            android:paddingBottom="20dp"
            android:paddingStart="?listPreferredItemPaddingLeft"
            android:paddingEnd="?listPreferredItemPaddingRight" />

        <RelativeLayout
            android:id="@+id/meeting_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="72dp">

            <ImageView
                android:id="@+id/meeting_date_icon"
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:alpha="0.54"
                android:src="@mipmap/ic_date_range_black_36dp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignWithParentIfMissing="true"
                android:layout_centerVertical="true"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="16dp"
                android:layout_toEndOf="@+id/meeting_date_icon"
                android:orientation="vertical"
                android:paddingBottom="16dp"
                android:paddingTop="16dp">

                <TextView
                    android:id="@+id/meeting_date_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/meeting_date_title"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body2"/>

                <TextView
                    android:id="@+id/meeting_date_subtitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"/>

            </LinearLayout>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/meeting_time_start"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="72dp">

            <ImageView
                android:id="@+id/meeting_time_start_icon"
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:alpha="0.54"
                android:src="@mipmap/ic_query_builder_black_36dp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignWithParentIfMissing="true"
                android:layout_centerVertical="true"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="16dp"
                android:layout_toEndOf="@+id/meeting_time_start_icon"
                android:orientation="vertical"
                android:paddingBottom="16dp"
                android:paddingTop="16dp">

                <TextView
                    android:id="@+id/meeting_time_start_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/meeting_time_start_title"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body2"/>

                <TextView
                    android:id="@+id/meeting_time_start_subtitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"/>

            </LinearLayout>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/meeting_time_end"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="72dp">

            <ImageView
                android:id="@+id/meeting_time_end_icon"
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:alpha="0.54"
                android:src="@mipmap/ic_query_builder_black_36dp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignWithParentIfMissing="true"
                android:layout_centerVertical="true"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="16dp"
                android:layout_toEndOf="@+id/meeting_time_end_icon"
                android:orientation="vertical"
                android:paddingBottom="16dp"
                android:paddingTop="16dp">

                <TextView
                    android:id="@+id/meeting_time_end_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/meeting_time_end_title"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body2"/>

                <TextView
                    android:id="@+id/meeting_time_end_subtitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"/>

            </LinearLayout>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/meeting_people"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="72dp">

            <ImageView
                android:id="@+id/meeting_people_icon"
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:alpha="0.54"
                android:src="@mipmap/ic_person_add_black_36dp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignWithParentIfMissing="true"
                android:layout_centerVertical="true"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="16dp"
                android:layout_toEndOf="@+id/meeting_people_icon"
                android:orientation="vertical"
                android:paddingBottom="16dp"
                android:paddingTop="16dp">

                <TextView
                    android:id="@+id/meeting_people_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/meeting_people_title"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body2"/>

                <TextView
                    android:id="@+id/meeting_people_subtitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"/>

            </LinearLayout>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/meeting_location"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="72dp">

            <ImageView
                android:id="@+id/meeting_location_icon"
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:alpha="0.54"
                android:src="@mipmap/ic_place_black_36dp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignWithParentIfMissing="true"
                android:layout_centerVertical="true"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="16dp"
                android:layout_toEndOf="@+id/meeting_location_icon"
                android:orientation="vertical"
                android:paddingBottom="16dp"
                android:paddingTop="16dp">

                <TextView
                    android:id="@+id/meeting_location_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/meeting_location_title"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body2"/>

                <TextView
                    android:id="@+id/meeting_location_subtitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"/>

            </LinearLayout>
        </RelativeLayout>
    </LinearLayout>
</ScrollView>
